1. 파일명 변경 2. 주간 최고/최저 기온 데이터 추출