@@ -11,10 +11,11 @@ import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 
-public class MyWeather {
+public class WeatherManager {
   // 초단기예보
   public static JSONArray getMicroForecast(int posX, int posY, LocalDateTime baseDate, String serviceKey) throws IOException, ParseException {
     String apiUrl = "https://apis.data.go.kr/1360000/VilageFcstInfoService_2.0/getUltraSrtFcst";
@@ -41,17 +42,16 @@ public class MyWeather {
     String ny = Integer.toString(posY);    //경도
     String dataType = "json";    //타입 xml, json
     String numberOfRows = Integer.toString(numOfRows);
-    StringBuilder urlBuilder = new StringBuilder(apiUrl);
-    urlBuilder.append("?" + URLEncoder.encode("ServiceKey", "UTF-8") + "=" + serviceKey);
-    urlBuilder.append("&" + URLEncoder.encode("nx", "UTF-8") + "=" + URLEncoder.encode(nx, "UTF-8")); //경도
-    urlBuilder.append("&" + URLEncoder.encode("ny", "UTF-8") + "=" + URLEncoder.encode(ny, "UTF-8")); //위도
-    urlBuilder.append("&" + URLEncoder.encode("base_date", "UTF-8") + "=" + URLEncoder.encode(baseDate.format(DateTimeFormatter.ofPattern("yyyyMMdd")), "UTF-8")); /* 조회하고싶은 날짜*/
-    urlBuilder.append("&" + URLEncoder.encode("base_time", "UTF-8") + "=" + URLEncoder.encode(baseDate.format(DateTimeFormatter.ofPattern("HHmm")), "UTF-8")); /* 조회하고싶은 시간 AM 02시부터 3시간 단위 */
-    urlBuilder.append("&" + URLEncoder.encode("dataType", "UTF-8") + "=" + URLEncoder.encode(dataType, "UTF-8"));    /* 타입 */
-    urlBuilder.append("&" + URLEncoder.encode("numOfRows", "UTF-8") + "=" + URLEncoder.encode(numberOfRows, "UTF-8"));    /* 한 페이지 결과 수 */
+    String urlBuilder = apiUrl + "?" + URLEncoder.encode("ServiceKey", StandardCharsets.UTF_8) + "=" + serviceKey +
+            "&" + URLEncoder.encode("nx", StandardCharsets.UTF_8) + "=" + URLEncoder.encode(nx, StandardCharsets.UTF_8) + //경도
+            "&" + URLEncoder.encode("ny", StandardCharsets.UTF_8) + "=" + URLEncoder.encode(ny, StandardCharsets.UTF_8) + //위도
+            "&" + URLEncoder.encode("base_date", StandardCharsets.UTF_8) + "=" + URLEncoder.encode(baseDate.format(DateTimeFormatter.ofPattern("yyyyMMdd")), StandardCharsets.UTF_8) + /* 조회하고싶은 날짜*/
+            "&" + URLEncoder.encode("base_time", StandardCharsets.UTF_8) + "=" + URLEncoder.encode(baseDate.format(DateTimeFormatter.ofPattern("HHmm")), StandardCharsets.UTF_8) + /* 조회하고싶은 시간 AM 02시부터 3시간 단위 */
+            "&" + URLEncoder.encode("dataType", StandardCharsets.UTF_8) + "=" + URLEncoder.encode(dataType, StandardCharsets.UTF_8) +    /* 타입 */
+            "&" + URLEncoder.encode("numOfRows", StandardCharsets.UTF_8) + "=" + URLEncoder.encode(numberOfRows, StandardCharsets.UTF_8);    /* 한 페이지 결과 수 */
 
     // GET 방식으로 전송해서 파라미터 받아오기
-    URL url = new URL(urlBuilder.toString());
+    URL url = new URL(urlBuilder);
     HttpURLConnection conn = (HttpURLConnection) url.openConnection();
     conn.setRequestMethod("GET");
     conn.setRequestProperty("Content-type", "application/json");
@@ -80,22 +80,20 @@ public class MyWeather {
     JSONObject parse_body = (JSONObject) parse_response.get("body");
     // body 로 부터 items 찾기
     JSONObject parse_items = (JSONObject) parse_body.get("items");
-    JSONArray result = (JSONArray) parse_items.get("item");
 
-    return result;
+    return (JSONArray) parse_items.get("item");
   }
 
   public static JSONArray getMidTermForecast(String regId, LocalDateTime baseDate, String serviceKey, String apiUrl) throws IOException, ParseException {
-    StringBuilder urlBuilder = new StringBuilder(apiUrl);
-    urlBuilder.append("?" + URLEncoder.encode("ServiceKey", "UTF-8") + "=" + serviceKey);
-    // 지역 ID
-    urlBuilder.append("&" + URLEncoder.encode("regId", "UTF-8") + "=" + URLEncoder.encode(regId, "UTF-8"));
-    urlBuilder.append("&" + URLEncoder.encode("tmFc", "UTF-8") + "=" + URLEncoder.encode(baseDate.format(DateTimeFormatter.ofPattern("yyyyMMddHHmm")), "UTF-8")); /* 조회하고싶은 날짜*/
-    urlBuilder.append("&" + URLEncoder.encode("dataType", "UTF-8") + "=" + URLEncoder.encode("json", "UTF-8"));    /* 타입 */
-    urlBuilder.append("&" + URLEncoder.encode("numOfRows", "UTF-8") + "=" + URLEncoder.encode("1", "UTF-8"));    /* 한 페이지 결과 수 */
+    String urlBuilder = apiUrl + "?" + URLEncoder.encode("ServiceKey", StandardCharsets.UTF_8) + "=" + serviceKey +
+            // 지역 ID
+            "&" + URLEncoder.encode("regId", StandardCharsets.UTF_8) + "=" + URLEncoder.encode(regId, StandardCharsets.UTF_8) +
+            "&" + URLEncoder.encode("tmFc", StandardCharsets.UTF_8) + "=" + URLEncoder.encode(baseDate.format(DateTimeFormatter.ofPattern("yyyyMMddHHmm")), StandardCharsets.UTF_8) + /* 조회하고싶은 날짜*/
+            "&" + URLEncoder.encode("dataType", StandardCharsets.UTF_8) + "=" + URLEncoder.encode("json", StandardCharsets.UTF_8) +    /* 타입 */
+            "&" + URLEncoder.encode("numOfRows", StandardCharsets.UTF_8) + "=" + URLEncoder.encode("1", StandardCharsets.UTF_8);    /* 한 페이지 결과 수 */
 
     // GET 방식으로 전송해서 파라미터 받아오기
-    URL url = new URL(urlBuilder.toString());
+    URL url = new URL(urlBuilder);
     HttpURLConnection conn = (HttpURLConnection) url.openConnection();
     conn.setRequestMethod("GET");
     conn.setRequestProperty("Content-type", "application/json");
@@ -124,8 +122,7 @@ public class MyWeather {
     JSONObject parse_body = (JSONObject) parse_response.get("body");
     // body 로 부터 items 찾기
     JSONObject parse_items = (JSONObject) parse_body.get("items");
-    JSONArray result = (JSONArray) parse_items.get("item");
 
-    return result;
+    return (JSONArray) parse_items.get("item");
   }
 }
